--- a/style.css
+++ b/style.css
@@ -1,89 +1,73 @@
-
-body {
-    background: orange;
-    text-align: center;
-    height: 5000px;
-    
+* {
+    font-family: 'Courier New';
 }
 
-a.frontendnow {
-    text-decoration: none;
-    color:aliceblue;
-}
-.header {
-    position: absolute;
-    left:0%;
-    right:0%;
-
-}
-    .header__button {
-        background:greenyellow;
-        color:palevioletred;
-        border: 2px dashed white; 
-        transition: opacity 1s ease-out;
-        flex-wrap: wrap; align-content: space-between;
-    } 
-    .header__button.header__button--border {
-       border: 3px dashed rgb(255, 187, 0);
-        flex-wrap: wrap; align-content: space;
-
-    } 
-
-
-    .header__button:hover {
-        color: pink;
-        opacity:0;
-        background: black;
-        cursor: pointer;
-    }
-    .custom:focus {
-        background:palegreen; 
-    } 
-@media screen and (max-width: 300px ) {
-    .custom { 
-        border: 2px dashed white; 
-    }
-}
-.container {
-    display: flex;
-    flex-wrap:wrap ;
-    border: 2px solid;
-    height: 300px;
-    margin-bottom: 40px; 
-
-}
-.body {
-    font-family: 'Lucida Sans';
-
-}
-.box {
-    background-color: greenyellow;
-    border: rgb(240, 206, 206);
-    padding: 20px; 
-    font-size: 1.6rem;
-    text-align: center;
-    margin: 5px;
+div{
+    background-color: hsl(0,100%,75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
 }
 
-.Test { 
-    background-color: pink;
-    color:rgb(245, 113, 113); 
-    padding: 10px; 20px;
-    border: none;
-    cursor: pointer;
-    font-size: 1rem;
-    margin: 5px;
-    display: inline-block;
-
+span { 
+    background-color: hsl(204, 100%, 75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
 }
 
-.Test:hover {
-    background: rgb(185, 235, 8);
-    
+.block{
+    width: 150px;
+    height: 150px;
+    background-color: hsl(0,100%,75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
 }
 
-.input:focus {
-    border: 2px solid red;
-    list-style: ;
+.blockspan {
+    display:block;
+    width: 150px;
+    height: 150px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
 }
-   
+
+.inline {
+    width: 150px;
+    height: 150px;
+    background-color: hsl(0,100%,75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
+    display:inline;
+}
+.inlinespan {
+    width: 150px;
+    height: 150px;
+    background-color:  hsl(204, 100%, 75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
+    display:inline;
+}
+
+.inline-block-span {
+    width: 150px;
+    height: 150px;
+    background-color:  hsl(204, 100%, 75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
+    display:inline-block;
+}
+.inline-block {
+    width: 150px;
+    height: 150px;
+    background-color:  hsl(0,100%,75%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size:16px;
+    display:inline-block;
+}
